PROJECT(conannvpipe)
cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()
include_directories(${CMAKE_BINARY_DIR}/sources)
add_subdirectory("${CMAKE_BINARY_DIR}/sources")
